--- a/Analytik Altfragengenerator.csproj
+++ b/Analytik Altfragengenerator.csproj
@@ -54,6 +54,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Models\DeviationQuestion.cs" />
     <Compile Include="Models\Question.cs" />
     <Compile Include="Models\StatisticsQuestion.cs" />
     <Compile Include="Models\TitrationQuestion.cs" />
